--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -345,8 +345,9 @@
 						font-size: 110%;
 						font-weight: 800;
 						padding: 0;
+
 						&:before {
-							content:'\00B7';
+							content: "\00B7";
 							vertical-align: middle;
 						}
 					}
