--- a/src/bp-templates/bp-nouveau/common-styles/hint/hint-always.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/hint/hint-always.scss
@@ -9,38 +9,50 @@
  */
 
 .#{$hintPrefix}always {
-	&:after, &:before {
+
+	&:after,
+	&:before {
 		opacity: 1;
 		visibility: visible;
 	}
 
 	&.#{$hintPrefix}top {
-		@include set-margin('translateY', -1, -50%);
+
+		@include set-margin("translateY", -1, -50%);
 
 		&-left {
-			@include set-margin('translateY', -1, -100%);
+
+			@include set-margin("translateY", -1, -100%);
 		}
+
 		&-right {
-			@include set-margin('translateY', -1, 0);
+
+			@include set-margin("translateY", -1, 0);
 		}
 	}
 
 	&.#{$hintPrefix}bottom {
-		@include set-margin('translateY', 1, -50%);
+
+		@include set-margin("translateY", 1, -50%);
+
 		&-left {
-			@include set-margin('translateY', 1, -100%);
+
+			@include set-margin("translateY", 1, -100%);
 		}
+
 		&-right {
-			@include set-margin('translateY', 1, 0);
+
+			@include set-margin("translateY", 1, 0);
 		}
 	}
 
 	&.#{$hintPrefix}left {
-		@include set-margin('translateX', -1);
+
+		@include set-margin("translateX", -1);
 	}
 
 	&.#{$hintPrefix}right {
-		@include set-margin('translateX', 1);
+
+		@include set-margin("translateX", 1);
 	}
 }
-
