--- a/src/bp-templates/bp-nouveau/common-styles/hint/hint-effects.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/hint/hint-effects.scss
@@ -11,16 +11,21 @@
 
 // Remove animation from tooltips.
 .#{$hintPrefix}no-animate {
-	&:before, &:after {
-		@include vendor('transition-duration', 0ms);
+
+	&:before,
+	&:after {
+
+		@include vendor("transition-duration", 0ms);
 	}
 }
 
 // Bounce effect in tooltips.
 .#{$hintPrefix}bounce {
-	&:before, &:after {
-		-webkit-transition: opacity 0.3s ease, visibility 0.3s ease, -webkit-transform 0.3s cubic-bezier(.71,1.7,.77,1.24);
-		-moz-transition: opacity 0.3s ease, visibility 0.3s ease, -moz-transform 0.3s cubic-bezier(.71,1.7,.77,1.24);
-		transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s cubic-bezier(.71,1.7,.77,1.24);
+
+	&:before,
+	&:after {
+		-webkit-transition: opacity 0.3s ease, visibility 0.3s ease, -webkit-transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+		-moz-transition: opacity 0.3s ease, visibility 0.3s ease, -moz-transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+		transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
 	}
 }
