--- a/src/bp-templates/bp-nouveau/common-styles/hint/hint-theme.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/hint/hint-theme.scss
@@ -6,11 +6,12 @@
  */
 
 [class*="#{$hintPrefix}"] {
+
 	/**
 	 * tooltip body
 	 */
 	&:after {
-		text-shadow: 0 -1px 0px darken($hintDefaultColor, $hintTextShadowDarkenAmount);
+		text-shadow: 0 -1px 0 darken($hintDefaultColor, $hintTextShadowDarkenAmount);
 		box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
 	}
 }
