Activity > Like, Comment formatting and tooltips

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1541,33 +1541,14 @@ a.layout-grid-view {
     content: "";
     display: table;
   }
-  .activity-list .activity-item .activity-content .activity-state {
-    clear: left;
-  }
-  .activity-list .activity-item .activity-content .activity-state span {
-    padding: 4px 8px;
-  }
-  .activity-list .activity-item .activity-content .activity-state .hint:after,
-  .activity-list .activity-item .activity-content .activity-state [data-hint]:after {
-    white-space: pre;
-  }
-  .activity-list .activity-item .activity-content .activity-state .separator {
-    display: none;
-    font-size: 110%;
-    font-weight: 800;
-    padding: 0;
-  }
-  .activity-list .activity-item .activity-content .activity-state .separator:before {
-    content: "\00B7";
-    vertical-align: middle;
-  }
-  .activity-list .activity-item .activity-content .activity-state .separator.has-likes.has-comments {
-    display: inline-block;
-  }
   .activity-list .activity-item .activity-header {
     margin: 0 15px 0 0;
     width: auto;
   }
+}
+
+.activity-inner:empty {
+  display: none;
 }
 
 .buddypress-wrap .activity-list .load-more,
