activity and comment text update after like and comment posting

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -177,6 +177,25 @@
 
 		} // close .activity-header
 
+		.activity-state {
+			display: none;
+
+			&.has-likes,
+			&.has-comments {
+				display: block;
+			}
+
+			.ac-state-separator {
+				display: none;
+			}
+
+			&.has-likes.has-comments {
+				.ac-state-separator {
+					display: inline-block;
+				}
+			}
+		}
+
 		.activity-content {
 
 			.activity-header,
