--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1419,6 +1419,22 @@ a.layout-grid-view {
   vertical-align: middle;
 }
 
+.activity-list .activity-item .activity-state {
+  display: none;
+}
+
+.activity-list .activity-item .activity-state.has-likes, .activity-list .activity-item .activity-state.has-comments {
+  display: block;
+}
+
+.activity-list .activity-item .activity-state .ac-state-separator {
+  display: none;
+}
+
+.activity-list .activity-item .activity-state.has-likes.has-comments .ac-state-separator {
+  display: inline-block;
+}
+
 .activity-list .activity-item .activity-content .activity-header,
 .activity-list .activity-item .activity-content .comment-header {
   color: #767676;
