--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1419,6 +1419,22 @@ a.layout-grid-view {
   vertical-align: middle;
 }
 
+.activity-list .activity-item .activity-state {
+  display: none;
+}
+
+.activity-list .activity-item .activity-state.has-likes, .activity-list .activity-item .activity-state.has-comments {
+  display: block;
+}
+
+.activity-list .activity-item .activity-state .ac-state-separator {
+  display: none;
+}
+
+.activity-list .activity-item .activity-state.has-likes.has-comments .ac-state-separator {
+  display: inline-block;
+}
+
 .activity-list .activity-item .activity-content .activity-header,
 .activity-list .activity-item .activity-content .comment-header {
   color: #767676;
@@ -1520,8 +1536,7 @@ a.layout-grid-view {
 
 .activity-list .activity-item .activity-meta.action .button span {
   background: none;
-  color: #555;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .activity-list .activity-item .activity-meta.action .unfav .like-count {
