--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -147,7 +147,7 @@ TABLE OF CONTENTS:
 #adminmenu #toplevel_page_bp-activity .wp-menu-image:before,
 #adminmenu #toplevel_page_bp-activity_user .wp-menu-image:before,
 #adminmenu #toplevel_page_bp-activity_network .wp-menu-image:before {
-	content: "\f303";
+	content: "\f130"
 }
 
 #adminmenu #toplevel_page_bp-groups .wp-menu-image:before,
